# ellocopo2

./: Cargo.toml  README.md  scheme.json
cli/: Cargo.toml
cli/src/: cmd.rs  main.rs  usb_util.rs
ellocopo2/: Cargo.toml
ellocopo2-codegen/: Cargo.toml  cargo  codegen.rs  rustfmt
ellocopo2-codegen/src/: gen.rs  lib.rs  parser.rs
ellocopo2/src/: lib.rs  parser.rs  priv_lvl.rs  protocol.rs  ty.rs
proto-test/: Cargo.toml  build.rs
proto-test/src/: main.rs
src/: lib.rs  parser.rs  protocol.rs  ty.rs
