[package]
name = "cli"
version = "0.1.0"
authors = ["Роман Масленников <m3angreen@gmail.com>"]
edition = "2018"

[dependencies]
ellocopo2 = { path = "../ellocopo2" }
libusb = "0.3.0"
log = "0.4.6"
#nom = "5"
syn = { version = "1.0", features = ["full", "extra-traits", "derive"] }
proc-macro2 = "1.0"
