[package]
name = "ellocopo2-codegen"
version = "0.1.0"
authors = ["Roman M. <m3angreen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ellocopo2 = { path = "../ellocopo2"}
serde_json = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits", "derive"] }
proc-macro2 = "1.0"
quote = "1.0"
